packages/runners/swc-plugin-runners/tests/errors/misplaced-directive-module/output.js
import { something } from "./other";

export async function myRunner(ctx) {
  return { name: "test", status: "pass" };
}

